# Trending-Terms-vs.-Model-Vocabulary-Drift

./: .gitignore  ENVIRONMENT_SETUP.md  README.md  accounts.db  accounts.txt  pyproject.toml  requirements.txt
dashboard/: README.md  app.py  requirements.txt  run.py
dashboard/templates/: index.html
dataPipeline/blueskyPipeline/: README.md  blueskyScrape.py  blueskyTermsDefinitionAnalysis.csv  bluesky_trending_posts.csv  dataProcessing.py  standard_defined_terms_clean copy.csv
dataPipeline/redditPipeline/: README.md  dataProcessing.py  redditScrape.py  redditTermsDefinitionAnalysis.csv  reddit_trending_posts.csv  standard_defined_terms_clean.csv
metricsCreation/: README.md  combinedTerms.csv  definition_analysis.py  definition_analysis_results.csv  drift_api.py  embedding_drift_analysis.py  embedding_drift_results.csv  metrics.py  standard_defined_terms_with_metrics.csv  token_analysis.py  token_analysis_results.csv  updateDataMetrics.py  visualizations.py
researchAndValidity/: README.md  definition_similarity.ipynb  semantic_drift_embeddings.ipynb  tiktokenExploration.ipynb
