[project]
name = "trending-terms-vs-model-vocabulary-drift"
version = "0.1.0"
description = "the craziest 3365 proj uv ever seen"
authors = [
    {name = "aryanthecar",email = "athakkar2135@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "tiktoken (>=0.9.0,<0.10.0)",
    "transformers (>=4.53.3,<5.0.0)",
    "scikit-learn (>=1.7.1,<2.0.0)",
    "pandas (>=2.3.1,<3.0.0)",
    "numpy (>=2.3.1,<3.0.0)",
    "torch (>=2.7.1,<3.0.0)",
    "sentence-transformers (>=5.0.0,<6.0.0)",
    "rogue (>=0.0.2,<0.0.3)",
    "rouge-score (>=0.1.2,<0.2.0)",
    "google (>=3.0.0,<4.0.0)",
    "google-generativeai (>=0.8.5,<0.9.0)",
    "matplotlib (>=3.10.3,<4.0.0)"
]

[tool.poetry]
packages = [{include = "trending_terms_vs"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
